--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ete",
   "version": "0.1.0",
-  "homepage": "https://ayusha0148.github.io/ete",
+  "homepage": "https://Ayusha0148.github.io/ete",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
